--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -25,9 +25,7 @@ html(lang='en')
           h1 Hi, I'm Wadada Hilda
           h3 AI Engineer & Web-developer
           p
-            | I am specializing in both frontend and backend development, crafting responsive websites and robust server-side solutions. 
-            | Passionate about clean code, intuitive design, and turning complex problems into elegant solutions. 
-            | I am also exploring the field of Artificial Intelligence, learning to integrate AI-powered features into applications to make them smarter and more intuitive.
+            |I specialize in full-stack development, creating responsive websites and robust server-side solutions. Passionate about clean code, intuitive design, and transforming complex problems into elegant solutions. I’m also exploring Artificial Intelligence, integrating AI powered features to make applications smarter, more interactive, and user friendly.
 
       // Education Section
       section#education.education
@@ -54,12 +52,6 @@ html(lang='en')
               | The application generates topic-based questions, evaluates freeform answers using an LLM, and implements adaptive weighted question selection based on user performance.
               | Includes persistent storage, OOP architecture, secure API key handling, and unit testing.
 
-            .card
-              h2 AI Powered Quiz
-            p 
-              | Developed a Python program that fetches real world data from public APIs, generates AI-powered summaries using OpenAI, and automatically sends reports via email. 
-              | Demonstrates full-stack automation, LLM integration, and error-handling in practical applications.
-            
           .card
             h2 Certifications
             p Certificate of Software Engineering with Javascript at Refactory Academy.
