--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -12,7 +12,7 @@ html(lang='en')
       header.header
         nav.navbar
           a.active(href='#home') Home
-          a(href='#education') Education
+          a(href='#projects') Projects
           a(href='#skills') Skills
           a(href='#goals') Goals
           a(href='#contactme') Contact Me
@@ -51,7 +51,10 @@ html(lang='en')
               | Built an AI-powered quiz system using Python and OpenAI’s API.
               | The application generates topic-based questions, evaluates freeform answers using an LLM, and implements adaptive weighted question selection based on user performance.
               | Includes persistent storage, OOP architecture, secure API key handling, and unit testing.
-
+            .card
+            h2  AI-Powered Report Generation and Emailing
+            p
+              | Developed a Python program that fetches real world data from public APIs, generates AI powered summaries using OpenAI, and automatically sends reports via email. Demonstrates full-stack automation, LLM integration, and error-handling in practical applications.
           .card
             h2 Certifications
             p Certificate of Software Engineering with Javascript at Refactory Academy.
@@ -110,7 +113,7 @@ html(lang='en')
             h2 Long Term
              p Become a highly skilled AI + Full-stack Engineer who can design, build, and deploy intelligent products end-to-end.
              p Start a tech-driven company focused on solving real problems in education, business operations, or the creative industry.
-             p Create tools that help people learn, work smarter, and access opportunities—especially in underrepresented communities.
+             p Create tools that help people learn, work smarter, and access opportunities especially in underrepresented communities.
 
       // Contact Section
       section.contact#contactme
