--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -30,30 +30,40 @@ html(lang='en')
       section#education.education
         h1  🎯My Projects
         .card-container
+          a.card-link(href="https://github.com/HildaWadada/MWF-Project" target="_blank")
           .card
             h2 Mayondo Woood & Furniture Ltd (MWF)
             p
               | MWF is a web-based business management system designed for a wood and furniture company to streamline inventory tracking, sales reporting, and employee performance monitoring.
               | This project simulates a real world B2B operational workflow and focuses heavily on clean UI structure and usability.
+
+          a.card-link(href="")
           .card
             h2 AI Interview App
             p Built a configurable AI interview system using the OpenAI API and Streamlit. The app simulates structured interviews, tracks token usage and cost per session, supports session persistence, and exports reports in PDF/JSON format. Includes API key management, security checks, and adjustable AI model parameters.
+
+          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.1.5" target="_blank")
           .card
             h2 Chess Capture Analyzer
             p
               | Built a Python-based chess board analyzer that determines which black pieces can be captured by a selected white piece.
               | Implemented input validation, board state tracking using dictionaries, and rule-based movement logic for chess pieces.
               | Focused on clean control flow and handling edge cases like duplicate positions and invalid inputs.
+
+          a.card-link(href="")
           .card
             h2 AI Powered Quiz
             p 
               | Built an AI-powered quiz system using Python and OpenAI’s API.
               | The application generates topic-based questions, evaluates freeform answers using an LLM, and implements adaptive weighted question selection based on user performance.
               | Includes persistent storage, OOP architecture, secure API key handling, and unit testing.
+
+          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.2.5" target="_blank")
           .card
             h2  AI-Powered Report Generation and Emailing
             p
               | Developed a Python program that fetches real world data from public APIs, generates AI powered summaries using OpenAI, and automatically sends reports via email. Demonstrates full-stack automation, LLM integration, and error-handling in practical applications.
+
           .card
             h2 Certifications
             p Certificate of Software Engineering with Javascript at Refactory Academy.
