--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -30,7 +30,7 @@ html(lang='en')
       section#education.education
         h1  🎯My Projects
         .card-container
-          a.card-link(href="https://github.com/HildaWadada/MWF-Project" target="_blank")
+          a.card-link(href="https://github.com/HildaWadada/MWF-Project")
           .card
             h2 Mayondo Woood & Furniture Ltd (MWF)
             p
@@ -42,7 +42,7 @@ html(lang='en')
             h2 AI Interview App
             p Built a configurable AI interview system using the OpenAI API and Streamlit. The app simulates structured interviews, tracks token usage and cost per session, supports session persistence, and exports reports in PDF/JSON format. Includes API key management, security checks, and adjustable AI model parameters.
 
-          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.1.5" target="_blank")
+          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.1.5")
           .card
             h2 Chess Capture Analyzer
             p
@@ -58,7 +58,7 @@ html(lang='en')
               | The application generates topic-based questions, evaluates freeform answers using an LLM, and implements adaptive weighted question selection based on user performance.
               | Includes persistent storage, OOP architecture, secure API key handling, and unit testing.
 
-          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.2.5" target="_blank")
+          a.card-link(href="https://github.com/TuringCollegeSubmissions/wwadad-SAE.2.5")
           .card
             h2  AI-Powered Report Generation and Emailing
             p
