--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -49,7 +49,7 @@ html(lang='en')
               | Implemented input validation, board state tracking using dictionaries, and rule-based movement logic for chess pieces.
               | Focused on clean control flow and handling edge cases like duplicate positions and invalid inputs.
 
-          a.card-link(href="")
+          //- a.card-link(href="")
           .card
             h2 AI Powered Quiz
             p 
